<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".ContactActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="616dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="27dp"
            android:paddingLeft="3dp"
            android:text="@string/contact_form_name"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textColor="@color/design_default_color_primary_dark"
            android:textSize="18sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/Name"
            android:layout_width="fill_parent"
            android:layout_height="29dp"
            android:layout_marginBottom="20dp"
            android:inputType="text"
            android:singleLine="true"
            android:textSize="14sp" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="3dp"
            android:text="@string/contact_form_email"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textColor="@color/design_default_color_primary_dark"
            android:textSize="18sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/Email"
            android:layout_width="fill_parent"
            android:layout_height="38dp"
            android:layout_marginBottom="20dp"
            android:inputType="textEmailAddress"
            android:singleLine="true"
            android:textSize="14sp" />


        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="3dp"
            android:text="@string/contact_form_subject"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textColor="@color/design_default_color_primary_dark"
            android:textSize="18sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/subject"
            android:layout_width="fill_parent"
            android:layout_height="38dp"
            android:layout_marginBottom="20dp"
            android:inputType="text"
            android:singleLine="true"
            android:textSize="14sp" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="32dp"
            android:paddingLeft="3dp"
            android:text="@string/contact_form_message"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textColor="@color/design_default_color_primary_dark"
            android:textSize="18sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/Message"
            android:layout_width="fill_parent"
            android:layout_height="219dp"
            android:layout_marginBottom="20dp"
            android:height="180dp"
            android:gravity="top"
            android:inputType="textMultiLine"
            android:textSize="14sp" />

        <Button
            android:id="@+id/FeedbackButton"
            android:layout_width="wrap_content"
            android:layout_height="37dp"
            android:layout_gravity="center"
            android:background="@color/design_default_color_primary"
            android:paddingBottom="1dp"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:paddingTop="1dp"
            android:text="@string/contact_form_button"
            android:textAllCaps="true"
            android:textColor="@android:color/white"
            android:textSize="13sp" />


    </LinearLayout>


</android.support.design.widget.CoordinatorLayout>